--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td>  <img src="uh2.jpg" alt="uh image" ></td>
+      <td>  <img src="images/uh2.jpg" alt="uh image" ></td>
       <td>
           <h1> Ali Hussain Syed </h1>
           <p> <em> University of Houston </em> </p>
